# webserv

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  Makefile  README.md  art.sh  autoindex  curl  curl_keepalive  log  log2.txt  main.cpp  postman  retcode.cpp  siege.sh  website
.github/workflows/: compile.yml  cpp-linter.yml  cpplinter.yml  run_check.yml
cgi-bin/: art.sh  sassy.py  script.sh  test.py  test.sh
conf/: autoindex.conf  cgi.conf  error.conf  redirect.conf  webserv.conf
data/: filetypes.csv  statuscodes.csv
docker/: Dockerfile  docker_run.sh  setup.sh
docker/linux/: Dockerfile  docker_run.sh
docker/nginx/: Dockerfile  docker_run.sh  nginx.conf
html/: 404.html  415.html  error.css  error.html  folder1.html  index.html  sp ace.html  styles.css
html/folder/: file2.html
html/folder1/: file1.html
html/laurin/: about.html  index.html  script.js  styles.css  upload.html
include/: colors.hpp
resources/: HTTP1.1.txt  filetypes.csv  resources.txt
resources/TCP_Test/: Makefile  index.html  readme.txt  server  server.cpp  server_multi.cpp  tcp_test.hpp  test.cpp
src/: main.cpp
src/config/: Config.cpp  Config.hpp  ConfigFile.cpp  ConfigFile.hpp  ConfigGet.cpp  ConfigParsing.cpp  ConfigParsing.hpp  Line.cpp  Line.hpp  Location.cpp  Location.hpp  LocationGet.cpp  settings.readme
src/core/: CgiConnector.cpp  CgiConnector.hpp  Header.cpp  Header.hpp  InOutHandler.cpp  Receive.cpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  ServerCluster.cpp  ServerCluster.hpp  Socket.cpp  Socket.hpp  Status.cpp  Status.hpp  TcpServer.cpp  TcpServer.hpp  Webserver.cpp  Webserver.hpp
src/http/: Request.cpp  Request.hpp  Response.cpp  (+3 more)
tester/: cgi_tester
(+40 files in other folders)
